--- a/IT/IT1/IT1.ipynb
+++ b/IT/IT1/IT1.ipynb
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,6 +1164,23 @@
     "print('MSE    : ', mean_squared_error(y_test, grid.predict(X_test)))\n",
     "print('MAE    : ', mean_absolute_error(y_test, grid.predict(X_test)))\n",
     "print('R2   : ', r2_score(y_test, grid.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2   :  -0.6666666666666665\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('R2   : ', r2_score([0,0,0,1,1], [0,0,1,0,1]))"
    ]
   }
  ],
