--- a/HW-DC/HW01/XGBoost.ipynb
+++ b/HW-DC/HW01/XGBoost.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
